# cprofiles

./: CMakeLists.txt
.github/workflows/: build.yaml  lint.yaml
include/cprofiles/: cprof_info.h  cprofiles.h
src/: CMakeLists.txt  cprof_decode_msgpack.c  cprof_decode_opentelemetry.c  cprof_encode_opentelemetry.c  cprof_encode_text.c  cprof_function.c  cprof_line.c  cprof_link.c  cprof_location.c  cprof_mapping.c  cprof_profile.c  cprof_resource.c  cprof_sample.c  cprofiles.c
tests/: CMakeLists.txt  decoder.c  opentelemetry_transcoder.c  profile.c
